[project]
name = "url-shortner-api"
version = "0.1.0"
description = "URL Shortner API"
authors = [
    {name = "olatejulian", email = "julian.lf.olate@gmail.com"},
]
dependencies = []
requires-python = ">=3.10.6"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
